Edited some styles, adding jumbotron, logo-text, main-logo. Added Buttons/Links to the Main Content

--- a/index.html
+++ b/index.html
@@ -2,11 +2,44 @@
 <html>
 <head>
 	<title>Missions Louisville</title>
-
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
 </head>
+
 <body>
-	<div>
+	
+
+<!-- Navbar-->
+	<div class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<a class="navbar-text logo-text pull-left" href="index.html">missionsLouisville</a>
+			<p class="navbar-text pull-right hidden-xs">from the Ville to the World</p>
+		</div>
 	</div>
+	<!-- End Navbar-->
+<!-- Jumbotron -->
+
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Reaching the World</h1>
+		</div>
+	</div>
+	<!-- End Jumbotron -->
+
+<!-- Region Select -->
+	<div class="container">
+		<a class="btn btn-default btn-lg" href="africa.html">Africa</a>
+		<a class="btn btn-default btn-lg" href="africa.html">Asia</a>
+		<a class="btn btn-default btn-lg" href="africa.html">Australia</a>
+		<a class="btn btn-default btn-lg" href="africa.html">Europe</a>
+		<a class="btn btn-default btn-lg" href="africa.html">North America</a>
+		<a class="btn btn-default btn-lg" href="africa.html">Oceania</a>
+		<a class="btn btn-default btn-lg" href="africa.html">South America</a>	
+	</div>
+	<!-- End Region Select -->
+
+
+	<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
