changed buttons to block level, added rows, added world svg image.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,20 @@
 
 <!-- Region Select -->
 	<div class="container">
-		<a class="btn btn-default btn-lg" href="africa.html">Africa</a>
-		<a class="btn btn-default btn-lg" href="africa.html">Asia</a>
-		<a class="btn btn-default btn-lg" href="africa.html">Australia</a>
-		<a class="btn btn-default btn-lg" href="africa.html">Europe</a>
-		<a class="btn btn-default btn-lg" href="africa.html">North America</a>
-		<a class="btn btn-default btn-lg" href="africa.html">Oceania</a>
-		<a class="btn btn-default btn-lg" href="africa.html">South America</a>	
+		<div class="row">
+			<div class="col-sm-6 col-lg-4">
+				<a class="btn btn-default btn-lg btn-block" href="africa.html">Africa</a>
+				<a class="btn btn-default btn-lg btn-block" href="africa.html">Asia</a>
+				<a class="btn btn-default btn-lg btn-block" href="africa.html">Australia</a>
+				<a class="btn btn-default btn-lg btn-block" href="africa.html">Europe</a>
+			</div>
+			<div class="col-sm-6 col-lg-4">
+				<a class="btn btn-default btn-lg btn-block" href="africa.html">North America</a>
+				<a class="btn btn-default btn-lg btn-block" href="africa.html">Oceania</a>
+				<a class="btn btn-default btn-lg btn-block" href="africa.html">South America</a>
+			</div>
+			
+		</div>
 	</div>
 	<!-- End Region Select -->
 
