Added some SVGs, bailed on adding functionality from amcharts.com

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 				<a class="btn btn-default btn-lg btn-block" href="africa.html">Oceania</a>
 				<a class="btn btn-default btn-lg btn-block" href="africa.html">South America</a>
 			</div>
-			
+			<div class="col-lg-4 hidden-sm">
+				<img src="img/continentsHigh.svg">
+			</div>
 		</div>
 	</div>
 	<!-- End Region Select -->
