Finally got that image to show after I added a viewBox. Added some padding to the columns and the row in the Region Select

--- a/index.html
+++ b/index.html
@@ -21,33 +21,37 @@
 
 	<div class="jumbotron">
 		<div class="container">
-			<h1>Reaching the World</h1>
+			<div class="row">
+				<div class="col-sm-6">
+					<h1>Reaching the World</h1>
+					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness. For now, enjoy a blandly purple BG, baby.</p>
+				</div> 
+				<div class="col-sm-6 hidden-xs">
+					<img class="img-responsive" src="img/continentsHigh.svg">
+				</div>
+			</div>
 		</div>
 	</div>
 	<!-- End Jumbotron -->
 
 <!-- Region Select -->
 	<div class="container">
-		<div class="row">
-			<div class="col-sm-6 col-lg-4">
-				<a class="btn btn-default btn-lg btn-block" href="africa.html">Africa</a>
-				<a class="btn btn-default btn-lg btn-block" href="africa.html">Asia</a>
-				<a class="btn btn-default btn-lg btn-block" href="africa.html">Australia</a>
-				<a class="btn btn-default btn-lg btn-block" href="africa.html">Europe</a>
+		<div class="row regionRow">
+			<div class="col-sm-6 regionColumns">
+				<a class="btn btn-default btn-lg btn-block" href="#">Africa</a>
+				<a class="btn btn-default btn-lg btn-block" href="#">Asia</a>
+				<a class="btn btn-default btn-lg btn-block" href="#">Australia/Oceania</a>
 			</div>
-			<div class="col-sm-6 col-lg-4">
-				<a class="btn btn-default btn-lg btn-block" href="africa.html">North America</a>
-				<a class="btn btn-default btn-lg btn-block" href="africa.html">Oceania</a>
-				<a class="btn btn-default btn-lg btn-block" href="africa.html">South America</a>
-			</div>
-			<div class="col-lg-4 hidden-sm">
-				<img src="img/continentsHigh.svg">
-			</div>
+			<div class="col-sm-6 regionColumns">
+				<a class="btn btn-default btn-lg btn-block" href="#">Europe</a>
+				<a class="btn btn-default btn-lg btn-block" href="#">North America</a>				
+				<a class="btn btn-default btn-lg btn-block" href="#">South America</a>
+			</div>			
 		</div>
 	</div>
 	<!-- End Region Select -->
 
-
+	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
 
