significant changes to layout. Only using buttons on xxs version.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
 </head>
-
 <body>
 	
-
 <!-- Navbar-->
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
@@ -22,11 +20,11 @@
 	<div class="jumbotron">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6">
-					<h1>Reaching the World</h1>
+				<div class="col-lg-5">
+					<h1 class="indexH1">Reaching the World</h1>
 					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness. For now, enjoy a blandly purple BG, baby.</p>
 				</div> 
-				<div class="col-sm-6 hidden-xs">
+				<div class="col-lg-7 hidden-xxs mainMapSVG">
 					<img class="img-responsive" src="img/continentsHigh.svg">
 				</div>
 			</div>
@@ -35,14 +33,14 @@
 	<!-- End Jumbotron -->
 
 <!-- Region Select -->
-	<div class="container">
+	<div class="container visible-xxs">
 		<div class="row regionRow">
-			<div class="col-sm-6 regionColumns">
+			<div class="col-xs-6 regionColumns">
 				<a class="btn btn-default btn-lg btn-block" href="#">Africa</a>
 				<a class="btn btn-default btn-lg btn-block" href="#">Asia</a>
 				<a class="btn btn-default btn-lg btn-block" href="#">Australia/Oceania</a>
 			</div>
-			<div class="col-sm-6 regionColumns">
+			<div class="col-xs-6 regionColumns">
 				<a class="btn btn-default btn-lg btn-block" href="#">Europe</a>
 				<a class="btn btn-default btn-lg btn-block" href="#">North America</a>				
 				<a class="btn btn-default btn-lg btn-block" href="#">South America</a>
