Changed map "color on hover", added viewBox to continentsLow.SVG

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<div class="jumbotron">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-5">
+				<div class="col-md-5">
 					<h1 class="indexH1">Reaching the World</h1>
 					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness. For now, enjoy a blandly purple BG, baby.</p>
 				</div> 
-				<div class="col-lg-7 hidden-xxs mainMapSVG">
+				<div class="col-md-7 hidden-xxs mainMapSVG">
 					<?xml version="1.0" encoding="utf-8"?>
 						<!-- (c) ammap.com | SVG map of Continents - Low -->
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:amcharts="http://amcharts.com/ammap" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 1050 700">
