--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			<div class="row">
 				<div class="col-md-5">
 					<h1 class="indexH1">Reaching the World</h1>
-					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness. For now, enjoy a blandly purple BG, baby.</p>
+					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness.</p>
+					<p><a href="about.html">Tell me more</a></p>
 				</div> 
 				<div class="col-md-7 hidden-xxs mainMapSVG">
 					<?xml version="1.0" encoding="utf-8"?>
