--- a/about.html
+++ b/about.html
@@ -2,10 +2,24 @@
 <html>
 <head>
 	<title>About</title>
-
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
 </head>
 <body>
-	<div>
+	<div class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<a class="navbar-text logo-text pull-left" href="index.html">missionsLouisville</a>
+			<p class="navbar-text pull-right hidden-xs">from the Ville to the World</p>
+		</div>
+	</div>
+	
+	<div class="jumbotron">
+		<h1>Here is the About page</h1>
+		<p>
+			missionsLouisville is designed to bring together brothers and sisters in Louisville, Kentucky around the topic and work of missions. Find out and join in on what other churches are doing here and around the world. 
+			<br>
+			Keep scrolling to find some great resources.
+		</p>
 	</div>
 </body>
 
