Made changes to xxs navbar and added .img-responsive to mapSVG

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness.</p>
 					<p><a href="about.html">Tell me more</a></p>
 				</div> 
-				<div class="col-md-7 hidden-xxs mainMapSVG">
+				<div class="col-md-7 hidden-xxs mainMapSVG img-responsive">
 					<?xml version="1.0" encoding="utf-8"?>
 						<!-- (c) ammap.com | SVG map of Continents - Low -->
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:amcharts="http://amcharts.com/ammap" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 1050 700">
