changed name of east-asia.html to asia.html, cleaned up the file. removed previously added buttons.

--- a/asia.html
+++ b/asia.html
@@ -14,12 +14,13 @@
 	</div>
 	
 	<div class="jumbotron">
-		<h1>East Asia</h1>
-		<p>
-			Will add a map here of east asia only. Using this as a template for Africa, and others. 
-			<br>
-			Keep scrolling to find some great resources.
-		</p>
+		<div class="container"><h1>East Asia</h1>
+			<p>
+				Will add a map here of east asia only. Using this as a template for Africa, and others. 
+				<br>
+				Keep scrolling for stuff.
+			</p>
+		</div>
 	</div>
 </body>
 
