--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
 	<div class="container visible-xxs">
 		<div class="row regionRow">
 			<div class="col-xs-6 regionColumns">
-				<a class="btn btn-default btn-lg btn-block" href="#">Middle East/North Africa</a>
-				<a class="btn btn-default btn-lg btn-block" href="#">Sub-Saharan Africa</a>
-				<a class="btn btn-default btn-lg btn-block" href="#">East Asia</a>
-				<a class="btn btn-default btn-lg btn-block" href="#">South/Southeast Asia</a>
+				<a class="btn btn-default btn-lg btn-block" href="#">Africa</a>
+				<a class="btn btn-default btn-lg btn-block" href="asia.html">Asia</a>
+				<a class="btn btn-default btn-lg btn-block" href="#">Australia/Oceania</a>
 			</div>
 			<div class="col-xs-6 regionColumns">
-				<a class="btn btn-default btn-lg btn-block" href="#">Australia/Oceania</a>
 				<a class="btn btn-default btn-lg btn-block" href="#">Europe</a>
 				<a class="btn btn-default btn-lg btn-block" href="#">North America</a>				
 				<a class="btn btn-default btn-lg btn-block" href="#">South America</a>
