--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h1 class="indexH1">Reaching the World</h1>
-					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness.</p>
+					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness.<br>This is a test.</p>
 					<p><a href="about.html">Tell me more</a></p>
 				</div> 
 				<div class="col-md-8 hidden-xxs mainMapSVG img-responsive">
