Added links to the SVG for region sites. Simple edit on Asia.html commented out original javascript for SVGs

--- a/asia.html
+++ b/asia.html
@@ -14,7 +14,7 @@
 	</div>
 	
 	<div class="jumbotron">
-		<div class="container"><h1>East Asia</h1>
+		<div class="container"><h1>Asia</h1>
 			<p>
 				Will add a map here of east asia only. Using this as a template for Africa, and others. 
 				<br>
