Added and edited several region pages. deleted unused javascript.

--- a/AustraliaOceania.html
+++ b/AustraliaOceania.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Asia</title>
+	<title>Australia &amp; Oceania</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
 </head>
@@ -14,7 +14,7 @@
 	</div>
 	
 	<div class="jumbotron">
-		<div class="container"><h1>Asia</h1>
+		<div class="container"><h1>Australia &amp; Oceania</h1>
 			<p>
 				Will add a map here of east asia only. Using this as a template for Africa, and others. 
 				<br>
