filled out links on region pages. messed around with js for main page svg

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
 	<!-- End Jumbotron -->
 
 <!-- Region Select -->
-	<div class="container visible-xxs">
+	<div class="container">
 		<div class="row regionRow">
 			<div class="col-xs-6 regionColumns">
-				<a class="btn btn-default btn-lg btn-block" href="#">Africa</a>
-				<a class="btn btn-default btn-lg btn-block" href="asia.html">Asia</a>
-				<a class="btn btn-default btn-lg btn-block" href="#">Australia/Oceania</a>
+				<a class="btn btn-default btn-lg btn-block" href="Africa.html">Africa</a>
+				<a class="btn btn-default btn-lg btn-block" href="Asia.html">Asia</a>
+				<a class="btn btn-default btn-lg btn-block" href="AustraliaOceania.html">Australia/Oceania</a>
 			</div>
 			<div class="col-xs-6 regionColumns">
-				<a class="btn btn-default btn-lg btn-block" href="#">Europe</a>
-				<a class="btn btn-default btn-lg btn-block" href="#">North America</a>				
-				<a class="btn btn-default btn-lg btn-block" href="#">South America</a>
+				<a class="btn btn-default btn-lg btn-block" href="Europe.html">Europe</a>
+				<a id="northAmericaButton" class="btn btn-default btn-lg btn-block" href="NorthAmerica.html">North America</a>				
+				<a class="btn btn-default btn-lg btn-block" href="SouthAmerica.html">South America</a>
 			</div>			
 		</div>
 	</div>
