added <meta name> for mobile compatibility.

--- a/Africa.html
+++ b/Africa.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
   	<script src="https://maps.googleapis.com/maps/api/js"></script>
+  	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 </head>
 <body>
 	<div class="navbar navbar-default navbar-fixed-top">
