--- a/NorthAmerica.html
+++ b/NorthAmerica.html
@@ -14,14 +14,23 @@
 	</div>
 	
 	<div class="jumbotron">
-		<div class="container"><h1>North America</h1>
-			<p>
-				Will add a map here of east asia only. Using this as a template for Africa, and others. 
-				<br>
-				Keep scrolling for stuff.
-			</p>
-		</div>
+		<div class="container">
+			<div class="col-md-4">
+				<h1>North America</h1>
+				<p>
+					Will add a map here of east asia only. Using this as a template for Africa, and others. 
+					<br>
+					Keep scrolling for stuff.
+				</p>
+			</div>
+			<div class="col-md-8 hidden-xxs img-responsive africaMap">
+				
+			</div>			
+		</div>			
 	</div>
+	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/custom.js" type="text/javascript"></script>
 </body>
 
 </html>
