--- a/asia.html
+++ b/asia.html
@@ -21,7 +21,14 @@
 				Keep scrolling for stuff.
 			</p>
 		</div>
+		<div class="col-md-8 hidden-xxs img-responsive africaMap">
+
+
+		</div>
 	</div>
+	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/custom.js" type="text/javascript"></script>
 </body>
 
 </html>
