--- a/Africa.html
+++ b/Africa.html
@@ -28,7 +28,7 @@
 			<div class="col-md-8 hidden-xxs img-responsive africaMap">
 				<?xml version="1.0" encoding="utf-8"?>
 				<!-- (c) ammap.com | SVG map of World - Low -->
-				<svg xmlns="http://www.w3.org/2000/svg" xmlns:amcharts="http://amcharts.com/ammap" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="370 320 300 280">
+				<svg viewBox="370 320 300 280">
 					<defs>
 						<style type="text/css">
 							.land
