--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 			</div>
 			<div class="col-xs-6 col-sm-4">
-				<p>The riddle of the sphynx. What creature walks on four legs in the morning, two and noon, and three at twilight?
+				<p>The answer is: man. At birth he crawls, in his prime he walks, near his death he leans on a cane.
 				</p>
 			</div>
 		</div>
@@ -134,7 +134,7 @@
 	<div class="container-flow">
       <div class="panel-footer">
       	<div class="footer-text">
-      		<p>Copyright © 2015 - TheVille || A MajorStudios Website</p>
+      		<p>Copyright &copy; 2015 - TheVille || A MajorStudios Website</p>
       	</div>
       </div>
 	</div>
