META. freaking meta.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Missions Louisville</title>
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
 </head>
@@ -123,7 +125,6 @@
 						c0-5.515-6.168-9.983-13.776-9.983h-8.821c4.512-13.483,15.416-26.634,31.072-34.866c48.14-25.31,68.982,19.354,55.583,44.167
 						C379.573,238.124,350.974,153.91,297.69,147.804z"/>
 				</svg>
-
 			</div>
 			<div class="col-xs-6 col-sm-4">
 				<p>The riddle of the sphynx. What creature walks on four legs in the morning, two and noon, and three at twilight?
@@ -134,7 +135,7 @@
 	<div class="container-flow">
       <div class="panel-footer">
       	<div class="footer-text">
-      		<p>Copyright © 2015 - TheVille || A MajorStudios Website</p>
+      		<p>Copyright &copy; 2015 - TheVille || A MajorStudios Website</p>
       	</div>
       </div>
 	</div>
