--- a/Africa.html
+++ b/Africa.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Africa</title>
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
-	  	<script src="https://maps.googleapis.com/maps/api/js"></script>
-	  	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+	  	<script src="https://maps.googleapis.com/maps/api/js"></script>	  	
 	</head>
 
 	<body>
@@ -13,7 +13,7 @@
 		<div class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 				<a class="navbar-text logo-text pull-left" href="index.html">missionsLouisville</a>
-				<p class="navbar-text pull-right hidden-xs">from the Ville to the World</p>
+				<p class="navbar-text pull-right hidden-xs hidden-xxs">from the Ville to the World</p>
 			</div>
 		</div>
 		<!-- End Navbar-->
