--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<a class="navbar-text logo-text pull-left" href="index.html">missionsLouisville</a>
-			<p class="navbar-text pull-right hidden-xs">from the Ville to the World</p>
+			<p class="navbar-text pull-right hidden-xs hidden-xxs">from the Ville to the World</p>
 		</div>
 	</div>
 	<!-- End Navbar-->
@@ -103,14 +103,24 @@
 				<p>The riddle of the sphynx. What creature walks on four legs in the morning, two and noon, and three at twilight?
 				</p>
 			</div>
-			<div class="col-sm-4 hidden-xs hidden-xxs img-responsive">
+			<div class="col-sm-4 hidden-xs hidden-xxs">
 				<?xml version="1.0" encoding="utf-8"?>
-					<!-- Generator: Adobe Illustrator 13.0.0, SVG Export Plug-In
-					<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1 Tiny//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11-tiny.dtd" [<!ENTITY ns_flows "http://ns.adobe.com/Flows/1.0/"]-->
-				<svg version="1.1" baseProfile="tiny" viewBox="0 0 350 359">
+					<svg version="1.1" baseProfile="tiny"
+						 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+						 x="0px" y="0px" width="350px" height="359px" viewBox="-0.864 -0.333 350 359" xml:space="preserve" class="img-responsive footer-img">
 					<defs>
+						<style type="text/css">
+							.fillFDL
+							{
+								fill: #CCCCCC;
+								fill-opacity: 0.3;
+								stroke: #CCCCCC;
+								stroke-opacity: 0.9;
+								stroke-width: 2;
+							}
+						</style>						
 					</defs>
-					<path d="M297.69,147.804c-47.642-5.459-97.763,27.791-107.192,94.289c-0.329,2.318-0.605,4.685-0.824,7.076h-2.81
+					<path class="fillFDL" d="M297.69,147.804c-47.642-5.459-97.763,27.791-107.192,94.289c-0.329,2.318-0.605,4.685-0.824,7.076h-2.81
 						c4.056-45.102,22.727-76.399,33.905-97.214c14.49-26.98,2.729-53.559-2.997-65.452C211.276,73.013,181.848,18.486,174.354,0
 						c-7.494,18.486-36.702,73.013-43.198,86.503c-5.728,11.893-17.488,38.472-2.998,65.452c11.103,20.673,29.87,52.316,34.226,97.214
 						h-3.208c-0.219-2.392-0.495-4.758-0.824-7.076c-9.43-66.499-59.551-99.748-107.192-94.289
@@ -124,10 +134,12 @@
 						c21.34,35.73-16.894,44.663-28.31,28.286c-2.577-3.698-4.23-7.814-5.033-12.162h10.572c7.608,0,13.776-4.47,13.776-9.983
 						c0-5.515-6.168-9.983-13.776-9.983h-8.821c4.512-13.483,15.416-26.634,31.072-34.866c48.14-25.31,68.982,19.354,55.583,44.167
 						C379.573,238.124,350.974,153.91,297.69,147.804z"/>
-				</svg>
+					</svg>
+
+				<!-- <img src="img/Fleur-de-lis-fill.svg" class="footer-img img-responsive"> -->
 			</div>
 			<div class="col-xs-6 col-sm-4">
-				<p>The answer is: man. At birth he crawls, in his prime he walks, near his death he leans on a cane.
+				<p>The answer is: man. At birth he crawls, in his prime he walks, near death he leans on a cane.
 				</p>
 			</div>
 		</div>
