--- a/asia.html
+++ b/asia.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Asia</title>
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
 </head>
@@ -14,16 +16,18 @@
 	</div>
 	
 	<div class="jumbotron">
-		<div class="container"><h1>Asia</h1>
-			<p>
+		<div class="container">
+			<div class="col-md-4">
+				<h1>Asia</h1>
+				<p>
 				Will add a map here of east asia only. Using this as a template for Africa, and others. 
 				<br>
 				Keep scrolling for stuff.
-			</p>
-		</div>
-		<div class="col-md-8 hidden-xxs img-responsive africaMap">
+				</p>
+			</div>
+			<div class="col-md-8 hidden-xxs img-responsive africaMap">
 
-
+			</div>
 		</div>
 	</div>
 	<script src="http://code.jquery.com/jquery.js"></script>
