--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<h1 class="indexH1">Reaching the World</h1>
+					<h1 class="indexH1">HI THERE <br>
+						Reaching the World</h1>
 					<p class="visible-xxs">XXS</p>
 					<p class="visible-xs">XS</p>
 					<p class="visible-sm">SM</p>
