--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<h1 class="indexH1">HI THERE <br>
-						Reaching the World</h1>
-					<p class="visible-xxs">XXS</p>
+					<h1 class="indexH1">Reaching the World</h1>
+					<!-- <p class="visible-xxs">XXS</p>
 					<p class="visible-xs">XS</p>
 					<p class="visible-sm">SM</p>
 					<p class="visible-md">md</p>
-					<p class="visible-lg">lg</p>
+					<p class="visible-lg">lg</p> -->
 					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness.<br>This is a test.</p>
 					<p><a href="about.html">Tell me more</a></p>
 				</div> 
