fixing php stuff...

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<p class="visible-sm">SM</p>
 					<p class="visible-md">md</p>
 					<p class="visible-lg">lg</p> -->
-					<p>This area will be filled with an inspiring message encouraging people toward world-wide awesomeness.<br>This is a test.</p>
+					<p>This </p>
 					<p><a href="about.html">Tell me more</a></p>
 				</div> 
 				<div class="col-md-8 hidden-xxs mainMapSVG img-responsive">
@@ -83,14 +83,14 @@
 	<div class="container">
 		<div class="row regionRow">
 			<div class="col-xs-6 regionColumns">
-				<a class="btn btn-default btn-lg btn-block" href="Africa.html">Africa</a>
-				<a class="btn btn-default btn-lg btn-block" href="Asia.html">Asia</a>
-				<a class="btn btn-default btn-lg btn-block" href="AustraliaOceania.html">Australia/Oceania</a>
+				<a class="btn btn-default btn-lg btn-block" href="/Africa">Africa</a>
+				<a class="btn btn-default btn-lg btn-block" href="/Asia">Asia</a>
+				<a class="btn btn-default btn-lg btn-block" href="/AustraliaOceania">Australia/Oceania</a>
 			</div>
 			<div class="col-xs-6 regionColumns">
-				<a class="btn btn-default btn-lg btn-block" href="Europe.html">Europe</a>
-				<a id="northAmericaButton" class="btn btn-default btn-lg btn-block" href="NorthAmerica.html">North America</a>				
-				<a class="btn btn-default btn-lg btn-block" href="SouthAmerica.html">South America</a>
+				<a class="btn btn-default btn-lg btn-block" href="/Europe">Europe</a>
+				<a class="btn btn-default btn-lg btn-block" href="/NorthAmerica">North America</a>				
+				<a class="btn btn-default btn-lg btn-block" href="/SouthAmerica">South America</a>
 			</div>			
 		</div>
 	</div>
