--- a/indexSAm.html
+++ b/indexSAm.html
@@ -20,7 +20,7 @@
 	
 	<div class="jumbotron">
 		<div class="container">
-			<div class="col-md-4">
+			<div class="col-sm-4 col-xs-6">
 				<h1>South America</h1>
 				<p>
 					Will add a map here of east asia only. Using this as a template for Africa, and others. 
@@ -28,7 +28,7 @@
 					Keep scrolling for stuff.
 				</p>
 			</div>
-			<div class="col-md-8 hidden-xxs img-responsive">
+			<div class="col-sm-8 col-xs-6 hidden-xxs img-responsive">
 				<!-- (c) ammap.com | SVG map of World - Low -->
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:amcharts="http://amcharts.com/ammap" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="240 420 145 240" class="africaMap">
 					<defs>
@@ -116,8 +116,8 @@
       </div>
 	</div>
 	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/custom.js" type="text/javascript"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/custom.js" type="text/javascript"></script>
 </body>
 
 </html>
