--- a/indexSAm.html
+++ b/indexSAm.html
@@ -34,7 +34,7 @@
 
 <!-- FOOTER -->
 <footer class="footer-bottom">
-	<div class="container">
+	<div>
 		<div class="row">
 			<div class="col-xs-6 col-sm-4">
 				<p>The riddle of the sphynx. What creature walks on four legs in the morning, two and noon, and three at twilight?
@@ -65,12 +65,15 @@
 				</p>
 			</div>
 		</div>
-	<!-- <footer class="footer panel-footer">      
+	</div>
+	
+</footer>
+<!-- <footer class="footer panel-footer">      
       	<div class="footer-text">
       		<p>Copyright &copy; 2015 - TheVille || A MajorStudios Website</p>
       	</div>      
-	</div>
-</footer> -->
+		</div>
+	</footer> -->
 <script src="http://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/custom.js" type="text/javascript"></script>
