--- a/indexSAm.html
+++ b/indexSAm.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
-	  	<script src="https://maps.googleapis.com/maps/api/js"></script>	  	
+	  	<!-- // <script src="https://maps.googleapis.com/maps/api/js"></script>	  	 -->
 	</head>
 	<body>
 
@@ -32,9 +32,13 @@
 		</div>
 	</div>
 
-<!-- FOOTER -->
+<div class="content">
+
+</div>
+
+
 <footer class="footer-bottom">
-	<div>
+	<div class="container">
 		<div class="row">
 			<div class="col-xs-6 col-sm-4">
 				<p>The riddle of the sphynx. What creature walks on four legs in the morning, two and noon, and three at twilight?
@@ -65,18 +69,14 @@
 				</p>
 			</div>
 		</div>
-	</div>
-	
-</footer>
-<!-- <footer class="footer panel-footer">      
+	<!-- <footer class="footer panel-footer">      
       	<div class="footer-text">
       		<p>Copyright &copy; 2015 - TheVille || A MajorStudios Website</p>
-      	</div>      
-		</div>
-	</footer> -->
+      	</div>       -->
+	</div>
+</footer>
 <script src="http://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/custom.js" type="text/javascript"></script>
 </body>
-
 </html>
