still messing with the footer.

--- a/indexSAm.html
+++ b/indexSAm.html
@@ -88,15 +88,16 @@
 				</div>
 				<div class="input-group">
 					<span class="input-group-addon">Missionary's Name:</span>
-					<input type="text" class="form-control" placeholder="Cathy Jones" aria-describedby="basic-addon1">
+					<input type="text" class="form-control" placeholder="Leave Blank if" aria-describedby="basic-addon1">
 				</div>
+				
 				<div class="input-group">
 <!-- Make a Drop Down -->
 					<span class="input-group-addon">Country of Service:</span>
 					<input type="text" class="form-control" placeholder="Azerbaijan" aria-describedby="basic-addon1">
 				</div>
 				<div class="input-group">
-					<span class="input-group-addon">Missionary's Name:</span>
+					<span class="input-group-addon">Term of Service:</span>
 					<input type="text" class="form-control" placeholder="Cathy Jones" aria-describedby="basic-addon1">
 				</div>
 
