--- a/indexSAm.html
+++ b/indexSAm.html
@@ -149,7 +149,10 @@
 	</footer>
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/custom.js" type="text/javascript"></script>
+	<script src="js/custom.js"></script>
+	<script>
+		App.init();
+	</script>
 </body>
 
 </html>
