fixed it all!! footer forever!!

--- a/indexSAm.html
+++ b/indexSAm.html
@@ -110,14 +110,14 @@
 	<footer class="footer-top">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-5 col-sm-4">
+				<div class="col-xs-6 col-sm-4">
 					<p class="text-center">The riddle of the sphynx. What creature walks on four legs in the morning, two and noon, and three at twilight?
 					</p>
 				</div>
-				<div class="col-xs-2 col-sm-4 hidden-xs hidden-xxs">
-					<img class="footer-fleur-top img-responsive" src="img/Fleur-de-lis-fill.svg">
+				<div class="col-sm-4 hidden-xxs hidden-xs">
+					<img class="footer-fleur-top center-block" src="img/Fleur-de-lis-fill.svg">
 				</div>
-				<div class="col-xs-5 col-sm-4">
+				<div class="col-xs-6 col-sm-4">
 					<p class="text-center">Do you have an Event or Person to add?
 					</p>
 					<a class="btn btn-default btn-block" href="/var/www/missionslouisville.org/public_html/include/add-event.php" role="button">Add Event/Person</a>
@@ -127,8 +127,8 @@
 	</footer>
 	<footer class="footer footer-bottom panel-footer">      
 	      	<div class="text-center">
-	      		<div class="visible-xxs">
-					<img class="footer-fleur-bottom img-responsive" src="img/Fleur-de-lis-fill.svg">
+	      		<div class="hidden-lg hidden-md hidden-sm">
+					<img class="footer-fleur-bottom center-block" src="img/Fleur-de-lis-fill.svg">
 				</div>
 	      		<p>Copyright &copy; 2015 - TheVille || A MajorStudios Website</p>
 	      	</div>		
