added JSON data

--- a/indexSAm.html
+++ b/indexSAm.html
@@ -127,7 +127,7 @@
 	</footer>
 	<footer class="footer footer-bottom panel-footer">      
 	      	<div class="text-center">
-	      		<div class="hidden-lg hidden-md hidden-sm">
+	      		<div class="visible-xs visible-xxs">
 					<img class="footer-fleur-bottom center-block" src="img/Fleur-de-lis-fill.svg">
 				</div>
 	      		<p>Copyright &copy; 2015 - TheVille || A MajorStudios Website</p>
