navbar stuff now

--- a/indexSAm.html
+++ b/indexSAm.html
@@ -11,7 +11,7 @@
 	<body>
 
 <!-- NAVBAR -->
-		<div class="navbar navbar-default navbar-fixed-top">
+		<div class="navbar navbar-default navbar-fixed-top navbar-collapse">
 			<div class="container">
 				<a class="navbar-text logo-text pull-left" href="/">missionsLouisville</a>
 				<p class="navbar-text pull-right hidden-xs hidden-xxs">from the Ville to the World</p>
