Made significant changes to each region page. Added information, got rid of silly stuff. added maps at all sizes.

--- a/indexSAm.html
+++ b/indexSAm.html
@@ -24,10 +24,9 @@
 			<div class="container">			
 				<div class="row">
 					<div class="col-md-4">	
-						<h1 class="indexH1">Add your event</h1>				
-						<p>On this page you will be able to add your event. After I learn how to do that.
-							<br>Won't that be nice?								
-						</p>
+						<h1 class="indexH1">Add an event</h1>				
+						<p>We would love to share God's work with your brothers and sisters in Louisville. If you are planning an event or have a friend working abroad, let us know here.</p>
+						<p>Each form is read and posted as soon as possible. For security reasons, this is a manual process.</p>
 					</div> 
 					<div class="col-md-8 hidden-xxs mainMapSVG img-responsive">
 							<!-- (c) ammap.com | SVG map of Continents - Low -->
@@ -43,10 +42,8 @@
 											stroke-width:0.5;
 										}
 									</style>
-
 									<amcharts:ammap projection="mercator" leftLongitude="-169.6" topLatitude="83.68" rightLongitude="190.25" bottomLatitude="-55.55"></amcharts:ammap>
 									<!--{id:"south_america"},{id:"north_america"},{id:"asia"},{id:"europe"},{id:"australia"},{id:"africa"}-->
-
 								</defs>
 								<g>
 									'''<a xlink:href= "/south-america">
