--- a/indexSAm.html
+++ b/indexSAm.html
@@ -107,7 +107,7 @@
 	<footer class="footer-top">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-6 col-sm-4">
+				<div class="left-footer col-xs-6 col-sm-4">
 					<p class="text-center">The riddle of the sphynx. What creature walks on four legs in the morning, two and noon, and three at twilight?
 					</p>
 				</div>
