adjusted the footer a little by adding some bigger fonts. ems baby! Also started working on the events.php. Here's hoping.

--- a/testJSMap.html
+++ b/testJSMap.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Missions Louisville</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
-</head>
+	<head>
+		<title>Missions Louisville</title>
+		<meta name="viewport" content="width=device-width">
+		<link href='https://fonts.googleapis.com/css?family=News+Cycle:400,700|Quattrocento+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="css/custom-styles.css">
+	</head>
 <body>
 	
 <!-- Navbar-->
@@ -122,11 +124,34 @@
 		</div>
 	</div>
 	<!-- End Region Select -->
-
-	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/custom.js" type="text/javascript"></script>
-	<script>App.start();</script>
-</body>
+		<footer class="footer-top">
+			<div class="container">
+				<div class="row">
+					<div class="left-footer col-xs-6 col-sm-4 ">
+						<p class="text-center footer-text">Thank you for visiting our site. Don't forget that missions start in your own home!</p>
+					</div>
+					<div class="col-sm-4 center-footer hidden-xs hidden-xxs">
+						<img class="footer-fleur-top center-block" src="img/Fleur-de-lis-fill.svg">				
+					</div>
+					<div class="right-footer col-xs-6 col-sm-4">
+						<p class="text-center footer-text">Do you have an Event or Person to add?</p>
+						<a class="btn btn-default btn-block" href="/add-event/" role="button">Add Event/Person</a>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<footer class="footer footer-bottom panel-footer">      
+      		<div class="visible-xs visible-xxs">
+				<img class="footer-fleur-bottom center-block" src="img/Fleur-de-lis-fill.svg">
+			</div>
+	      	<div class="text-center">
+	      		<p>Copyright &copy; 2015 - TheVille || A MajorStudios Website</p>
+	      	</div>      			
+		</footer>
+		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/custom.js" type="text/javascript"></script>
+		<script>App.start();</script>
+	</body>
 
 </html>
