--- a/testJSMap.html
+++ b/testJSMap.html
@@ -131,7 +131,7 @@
 						<p class="text-center footer-text">Thank you for visiting our site. Don't forget that missions start in your own home!</p>
 					</div>
 					<div class="col-sm-4 center-footer hidden-xs hidden-xxs">
-						<?  ?>
+						<img class="footer-fleur-top center-block" src="img/Fleur-de-lis-fill.svg">
 					</div>
 					<div class="right-footer col-xs-6 col-sm-4">
 						<p class="text-center footer-text">Do you have an Event or Person to add?</p>
