--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="region">
 	<head>
 		<meta charset="utf-8">
 		<title>TEST INDEX</title>
@@ -76,20 +76,29 @@
 	<!-- End Jumbotron -->
 
 
-	<!-- Region Select -->
-		<div class="container">
-			<div class="row regionRow">
-				<div class="col-xs-6 regionColumns">
-					<a class="btn btn-default btn-lg btn-block" href="/africa">Africa</a>
-					<a class="btn btn-default btn-lg btn-block" href="/asia">Asia</a>
-					<a class="btn btn-default btn-lg btn-block" href="/australia-oceania">Australia/Oceania</a>
-				</div>
-				<div class="col-xs-6 regionColumns">
-					<a class="btn btn-default btn-lg btn-block" href="/europe">Europe</a>
-					<a class="btn btn-default btn-lg btn-block" href="/north-america">North America</a>				
-					<a class="btn btn-default btn-lg btn-block" href="/south-america">South America</a>
-				</div>			
-			</div>
+<!-- testing AngularJS insertion-->
+
+		<div ng-controller="RegionEvents as region">
+			<div class="container">
+				<div class="panel panel-default">
+					<h3 class="panel-heading">{{region.event.country}}</h3>
+					<h4 class="panel-body">
+						<p>Church: <small></small>{{region.event.churches}}</p>
+						<p>Departure Date: <small>{{region.event.date-start}}</small></p>
+						<p>Return Date: <small>{{region.event.date-end}}</small></p>
+						<p>Contact email: <small>jdiaz@example.com</small></p>
+						<p>Description: <small>{{region.event.description}}</small></p>
+					</h4>
+					<h3 class="panel-heading">Ukraine</h3>
+					<h4 class="panel-body">
+						<p>Church: <small></small>Portland Methodist Church</p>
+						<p>Departure Date: <small>June 4, 2016</small></p>
+						<p>Return Date: <small>June 19, 2016</small></p>
+						<p>Contact email: <small>pjones@example.com</small></p>
+						<p>Description: <small>We will be visiting churches all over the Ukraine to encourage our brothers and sisters. We are also blessed to deliver many gifts on our journey.</small></p>
+					</h4>
+				</div>	
+			</div>	
 		</div>
 			
 			
@@ -118,8 +127,10 @@
 	      	</div>      			
 		</footer>
 		<script src="http://code.jquery.com/jquery.js"></script>
-		<script src="/js/bootstrap.min.js"></script>
-		<script src="/js/custom.js" type="text/javascript"></script>
+		<script src="js/angular.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/custom.js" type="text/javascript"></script>
+		<script src="js/app.js" type="text/javascript"></script>
 		<!-- <script>App.init();</script> -->
 	</body>
 
