messing with angular...

--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -83,15 +83,15 @@
 				<div class="panel panel-default">
 					<h3 class="panel-heading">{{region.event.country}}</h3>
 					<h4 class="panel-body">
-						<p>Church: <small></small>{{region.event.churches}}</p>
-						<p>Departure Date: <small>{{region.event.date-start}}</small></p>
-						<p>Return Date: <small>{{region.event.date-end}}</small></p>
+						<p>Church: <small>{{region.event.churches}}</small></p>
+						<p>Departure Date: <small>{{region.event.start}}</small></p>
+						<p>Return Date: <small>{{region.event.end}}</small></p>
 						<p>Contact email: <small>jdiaz@example.com</small></p>
 						<p>Description: <small>{{region.event.description}}</small></p>
 					</h4>
 					<h3 class="panel-heading">Ukraine</h3>
 					<h4 class="panel-body">
-						<p>Church: <small></small>Portland Methodist Church</p>
+						<p>Church: <small>Portland Methodist Church</small></p>
 						<p>Departure Date: <small>June 4, 2016</small></p>
 						<p>Return Date: <small>June 19, 2016</small></p>
 						<p>Contact email: <small>pjones@example.com</small></p>
