--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -27,9 +27,8 @@
 			<div class="container">			
 				<div class="row">
 					<div class="col-md-4">	
-						<h1>Reaching the World</h1>				
-						<p>There are so many churches in the Derby City that send believers abroad. Click on a continent to find out what's happening there. </p>
-						<p><a href="/about">Read more about us</a></p>
+						<reaching-world></reaching-world>
+						<div many-churches></div>
 					</div> 
 					<div class="col-md-8 mainMapSVG img-responsive">
 						<!-- (c) ammap.com | SVG map of Continents - Low -->
