--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -103,11 +103,11 @@
 							<h4>Address:<small> {{church.event.address}}, {{church.event.city}}, {{church.event.state}}, {{church.event.zipcode}}</small></h4>
 							<h4>website: <small>{{church.event.website}}</small></h4>
 						</div>
-						<h4 class="panel-body" ng-controller="SendingOrganization as sender" ng-show="panel.isSelected(3)">
-							<p>Sending Organization: <small>{{sender.event.name}}</small></p>
-							<p>email <small>{{sender.event.email}}</small></p>
-							<p>Website: <small>{{sender.event.website}}</small></p>
-						</h4>
+						<div class="panel-body" ng-controller="SendingOrganization as sender" ng-show="panel.isSelected(3)">
+							<h4>Sending Organization: <small>{{sender.event.name}}</small></h4>
+							<h4>email <small>{{sender.event.email}}</small></h4>
+							<h4>Website: <small>{{sender.event.website}}</small></h4>
+						</div>
 						<h3 class="panel-heading">Ukraine</h3>
 						<h4 class="panel-body">
 							<p>Church: <small>Portland Methodist Church</small></p>
