--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -110,11 +110,11 @@
 						</div>
 						<h3 class="panel-heading">Ukraine</h3>
 						<div class="panel-body">
-							<h4>Church: <small>h4ortland Methodist Church</small></h4>
-							<h4>Deh4arture Date: <small>June 4, 2016</small></h4>
+							<h4>Church: <small>Portland Methodist Church</small></h4>
+							<h4>Departure Date: <small>June 4, 2016</small></h4>
 							<h4>Return Date: <small>June 19, 2016</small></h4>
-							<h4>Contact email: <small>h4jones@examh4le.com</small></h4>
-							<h4>Descrih4tion: <small>We will be visiting churches all over the Ukraine to encourage our brothers and sisters. We are also blessed to deliver many gifts on our journey.</small></h4>
+							<h4>Contact email: <small>pjones@example.com</small></h4>
+							<h4>Description: <small>We will be visiting churches all over the Ukraine to encourage our brothers and sisters. We are also blessed to deliver many gifts on our journey.</small></h4>
 						</div>
 					</div>	
 				</section>
