testing ng-cloak

--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -77,7 +77,7 @@
 
 <!-- testing AngularJS insertion-->
 
-		<div ng-controller="RegionEvents as region" >
+		<div class="ng-cloak" ng-controller="RegionEvents as region" >
 			<div class="container">
 				<section ng-controller="PanelController as panel">
 					<div class="panel panel-default">
